# node-minecraft-assets

./: .eslintignore  .eslintrc.js  .gitignore  .npmignore  BUILD.bazel  LICENSE.md  README.md  WORKSPACE  build.ts  package.json  tsconfig.json
lib/: index.ts  indexes.ts  loader.ts  mc_data_node.ts  minecraft_data_types.ts
