load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_project(
    name = "next_minecraft_assets",
    srcs = glob([
        "lib/*.ts",
        "index.ts",
        "minecraft-assets/**/*.json",
    ]),
    composite = True,
    declaration = True,
    declaration_map = True,
    resolve_json_module = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "@npm//@types/node",
    ],
    out_dir = "out",
)
